Kubernates_Manifest_Examples/Manifest_Examples/ingress_examples/multipod_same_namespace_manifests/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-database
  template:
    metadata:
      labels:
        app: todo-database
    spec:
      containers:
      - name: todo-database
        image: mongo:6
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: todo-database  
spec:
  type: ClusterIP
  ports:
  - port: 27017
  selector:
    app: todo-database
